Fix menu overflow

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -660,6 +660,7 @@ input[type="number"] {
     border-radius: 1rem;
     font-size: 13px;
     padding: 0.5rem;
+    width: fit-content;
     ul.mode-connected {
         display: none;
     }
@@ -675,9 +676,7 @@ input[type="number"] {
         }
         a {
             font-weight: normal;
-            padding-top: 0.25rem;
-            padding-bottom: 0.25rem;
-            padding-left: 2rem;
+            padding: 0.25rem 0.5rem 0.25rem 2rem;
             background-color: transparent;
             color: var(--text);
             border-radius: 999px;
